--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+  font-family: 'Merriweather Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #b0dbee;
+
+  #form {
+    color: white;
+    background-color: #009edf;
+    border-radius: 5px;
+
+    width: 400px;
+    padding: 40px;
+    margin: 150px auto;
+
+    -webkit-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.75);
+
+    p {
+      font-size: 0.9em;
+    }
+
+    button {
+      width: 100%;
+      text-align: center;
+      color: grey;
+      margin-top: 20px;
+      border: 1px solid rgba(0, 0, 0, 0.4);
+    }
+
+    .form-group {
+      margin: 15px auto;
+
+      label {
+        font-weight: bold;
+        font-size: 0.9em;
+      }
+
+      .input-group {
+        border-radius: 5px;
+        -webkit-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.35);
+        -moz-box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.35);
+        box-shadow: -1px 3px 18px 0px rgba(0, 0, 0, 0.35);
+
+        .input-group-addon {
+          border: none;
+          border-right: 1px solid rgba(0, 0, 0, 0.2);
+        }
+
+        input {
+          padding-left: 10px;
+        }
+
+        i {
+          color: #009edf;
+        }
+      }
+
+      input {
+        padding: 3px;
+        width: 100%;
+        border: none;
+        border-radius: 0 5px 5px 0;
+      }
+    }
+  }
 }
